DuPont DevSB/src/objects/Issue__c.object
<CustomObject>
    <fields>
        <fullName>SubType__c</fullName>
        <description>Used to further classify the type of Issue</description>
        <label>SubType</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add Custom Link</fullName>
                </value>
                <value>
                    <fullName>Break/Fix</fullName>
                </value>
                <value>
                    <fullName>Browser settings</fullName>
                </value>
                <value>
                    <fullName>Business Signoff</fullName>
                </value>
                <value>
                    <fullName>Change Control Report</fullName>
                </value>
                <value>
                    <fullName>Create New Workspace</fullName>
                </value>
                <value>
                    <fullName>Customer Portal</fullName>
                </value>
                <value>
                    <fullName>Custom Report Type</fullName>
                </value>
                <value>
                    <fullName>Custom Settings</fullName>
                </value>
                <value>
                    <fullName>Deactivate User Account</fullName>
                </value>
                <value>
                    <fullName>Delete record</fullName>
                </value>
                <value>
                    <fullName>Delete Workspace</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Desktop Setup</fullName>
                </value>
                <value>
                    <fullName>Documentation Complete</fullName>
                </value>
                <value>
                    <fullName>DuPont Firewall Issue</fullName>
                </value>
                <value>
                    <fullName>eMail</fullName>
                </value>
                <value>
                    <fullName>Enable Functionality</fullName>
                </value>
                <value>
                    <fullName>End-User Training</fullName>
                </value>
                <value>
                    <fullName>ETL</fullName>
                </value>
                <value>
                    <fullName>Explore</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Grant Login Access</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>IOD</fullName>
                </value>
                <value>
                    <fullName>Key-User Training</fullName>
                </value>
                <value>
                    <fullName>Lead Routing</fullName>
                </value>
                <value>
                    <fullName>Mass record change</fullName>
                </value>
                <value>
                    <fullName>Mass record import</fullName>
                </value>
                <value>
                    <fullName>Modify Account Teams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <description>This field will have the sub pick list values for waiting state</description>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting with Customer</fullName>
                </value>
                <value>
                    <fullName>Waiting with Integration Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_DateTime__c</fullName>
        <description>DateTime which Issue, Request or Idea was originally submitted to Administrator</description>
        <label>Submitted DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalApprovedByReveiwTeamHours__c</fullName>
        <description>Total No Of Hours Approved By Review team</description>
        <label>TotalApprovedByReveiwTeamHours</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalIssueCompleteHours__c</fullName>
        <label>TotalIssueCompleteHours</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNoOFAcceptedHours__c</fullName>
        <description>TotalNoOFAcceptedHours</description>
        <label>TotalNoOFAcceptedHours</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNoOfDaysIssueCompleted__c</fullName>
        <formula>(Date_Closed__c - CreatedDate)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalNoOfHoursIssueCompleted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNoOfEscalatedHours__c</fullName>
        <label>TotalNoOfEscalatedHours</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNoOfHoursInProgress__c</fullName>
        <description>Total No Of Hours In Progress</description>
        <label>TotalNoOfHoursInProgress</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNoOfHoursNotStarted__c</fullName>
        <label>TotalNoOfHoursNotStarted</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNoOfHoursWaiting__c</fullName>
        <description>Total No Of Hours In Waiting Status</description>
        <label>TotalNoOfHoursWaiting</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNoOfOnHoldHours__c</fullName>
        <label>TotalNoOfOnHoldHours</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Category or type of issue, idea, request, or risk</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Analytics-Reporting</fullName>
                </value>
                <value>
                    <fullName>Analytics-Tagging</fullName>
                </value>
                <value>
                    <fullName>Approval Process</fullName>
                </value>
                <value>
                    <fullName>Architecture Review</fullName>
                </value>
                <value>
                    <fullName>Audit IT Controls</fullName>
                </value>
                <value>
                    <fullName>Business Process</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Charts &amp; Dashboards</fullName>
                </value>
                <value>
                    <fullName>Connect for Lotus Notes</fullName>
                </value>
                <value>
                    <fullName>Connect Offline</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Content-Data</fullName>
                </value>
                <value>
                    <fullName>Content-Image</fullName>
                </value>
                <value>
                    <fullName>Content-Text</fullName>
                </value>
                <value>
                    <fullName>Content-Tool</fullName>
                </value>
                <value>
                    <fullName>Content-Translations</fullName>
                </value>
                <value>
                    <fullName>Content-Video</fullName>
                </value>
                <value>
                    <fullName>CRM Content</fullName>
                </value>
                <value>
                    <fullName>CRM-Data</fullName>
                </value>
                <value>
                    <fullName>CRM-Integration</fullName>
                </value>
                <value>
                    <fullName>CRM-Tool</fullName>
                </value>
                <value>
                    <fullName>Custom Design</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Data Model</fullName>
                </value>
                <value>
                    <fullName>Data Model - Field</fullName>
                </value>
                <value>
                    <fullName>Data Model - Picklist</fullName>
                </value>
                <value>
                    <fullName>Data Model Review</fullName>
                </value>
                <value>
                    <fullName>Design Review</fullName>
                </value>
                <value>
                    <fullName>Desktop Settings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waiting_for_User_since__c</fullName>
        <inlineHelpText>Date since the status is set to Waiting for User inputs</inlineHelpText>
        <label>Waiting for User since</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>lastTimeStatusChanged__c</fullName>
        <label>lastTimeStatusChanged</label>
        <type>DateTime</type>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>AP_Issues</fullName>
        <columns>Region__c</columns>
        <columns>Issue__c</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Issue_Details__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Submitted_By__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted_DateTime__c</columns>
        <columns>Date_Closed__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Asia Pacific</value>
        </filters>
        <label>CRM AP Issues</label>
        <language>en_US</language>
        <sharedTo>
            <group>APChinaCBS</group>
            <group>APEngagementLeader</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllITIssuesbyProgram</fullName>
        <columns>Issue__c</columns>
        <columns>Submitted_By__c</columns>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Type__c</columns>
        <columns>SubType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Issue__c.IssuesandIdeas</value>
        </filters>
        <filters>
            <field>Issue_Type__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <label>All IT Issues by Program</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDCDuPontSystemAdministrators</group>
            <group>SFDCIssueManagers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_IT_IssuesIdeasbyType</fullName>
        <columns>Issue__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>SubType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Submitted_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Issue__c.IssuesandIdeas</value>
        </filters>
        <filters>
            <field>Issue_Type__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <label>All IT Issues and Ideas by Type</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDCDuPontSystemAdministrators</group>
            <group>SFDCIssueManagers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Issues_by_Record_Type</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Issue__c</columns>
        <columns>NAME</columns>
        <columns>Submitted_By__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Issues by Record Type</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDCDuPontSystemAdministrators</group>
            <group>SFDCIssueManagers</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_EMEA_Issues_SFDC_Utility_Open</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>Issue__c</columns>
        <columns>NAME</columns>
        <columns>Submitted_By__c</columns>
        <columns>Severity__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Target_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Issue__c.Price_Approval</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>,Completed,Not Started,Accepted,In Progress,DuPont Review,On Hold,Waiting</value>
        </filters>
        <filters>
            <field>Submitted_By__c</field>
            <operation>equals</operation>
            <value>Werner Coppens,Annick Huysmans,Dirk Halstenbach,Katia Lopes-Almeida</value>
        </filters>
        <filters>
            <field>Submitted_By__c</field>
            <operation>equals</operation>
            <value>Sandra Verbiest,Rita De Pauw,Geert Simons,Johanna Van Gorp,Anthon Bos</value>
        </filters>
        <label>BI EMEA Issues SFDC Utility - Anthon</label>
        <language>en_US</language>
        <sharedTo>
            <group>SFDC_Utility_issue_manager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_Issues</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Submitted_By__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>startsWith</operation>
            <value>BI</value>
        </filters>
        <label>BI Issues</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>BuildingInnovations</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_Issues_EMEA1</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Submitted_By__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>startsWith</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>EMEA</value>
        </filters>
        <label>BI Issues EMEA</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>BuildingInnovations</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_Issues_LA</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Submitted_By__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>startsWith</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Latin America</value>
        </filters>
        <label>BI Issues LA</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>BuildingInnovations</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_Issues_Open</fullName>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Submitted_By__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Type__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>startsWith</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>,Not Started,Accepted,In Progress,DuPont Review,On Hold,Waiting,Escalated</value>
        </filters>
        <label>BI Issues - Open</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>BuildingInnovations</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BI_NA_Issues</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Submitted_By__c</columns>
        <columns>Description__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Date_Closed__c</columns>
        <columns>Date_Accepted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Program__c</field>
            <operation>startsWith</operation>
            <value>BI</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>North America,All</value>
        </filters>
        <label>BI-NA Issues</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinatesInternal>BINA</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BatchSFDC_DeployUser</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitted_By__c</field>
            <operation>equals</operation>
            <value>BatchSFDC DeployUser</value>
        </filters>
        <label>BatchSFDC DeployUser</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CRMITArchitectureReview_Issue</fullName>
        <filterScope>Queue</filterScope>
        <label>Completed Issues</label>
        <queue>CompletedIssues</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRMITDesignReview_Issue</fullName>
        <columns>NAME</columns>
        <columns>Date_Accepted__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Submitted_By__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Not Applicable/System Hard Closed</value>
        </filters>
        <label>CRM IT Design Review</label>
        <language>en_US</language>
        <queue>CRMITDesignReview</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRMITTechnicalReview_Issue</fullName>
        <filterScope>Queue</filterScope>
        <label>CRM IT Technical Review</label>
        <queue>CRMITTechnicalReview</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CRM_ITArchitecture_Review_Queue</fullName>
        <columns>NAME</columns>
        <columns>Submitted_By__c</columns>
        <columns>Program__c</columns>
        <columns>SubType__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Issue_Type__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <label>Completed Issues</label>
        <language>en_US</language>
        <queue>CompletedIssues</queue>
        <sharedTo>
            <group>SFDCAdminSupport787141</group>
            <group>SFDCBusinessITLeaders</group>
            <group>SFDCCRMEngagementTeams</group>
            <group>SFDCCRMITProjectTeams</group>
            <group>SFDCDevelopers</group>
            <group>SFDCDuPontSystemAdministrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <recordTypes>
        <fullName>DuPont_Administration</fullName>
        <active>true</active>
        <description>Used by SFDC Administrators to document issues reported by Users</description>
        <label>DuPont Administration</label>
    </recordTypes>
    <recordTypes>
        <fullName>IssuesandIdeas</fullName>
        <active>true</active>
        <description>Key User Requests to Administrator regarding system issues or improvement ideas</description>
        <label>Issues and Ideas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Communications</fullName>
        <active>true</active>
        <description>For Digital Marketing &amp; Communications requests (e.g. Changes in Product Finder data)</description>
        <label>Marketing Communications</label>
    </recordTypes>
    <recordTypes>
        <fullName>Price_Approval</fullName>
        <active>true</active>
        <description>Used by Key users of Price Approval to raise Issue&apos;s</description>
        <label>Price Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Review</fullName>
        <active>true</active>
        <description>Used to document Scheduled &amp; Approved Project Reviews (i.e. Arch, Data Model, Security) : Link to CRM StageRelease for Deployment</description>
        <label>Project Review</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Application_Mandatory_for_TCS_Developer</fullName>
        <active>true</active>
        <description>Application field is mandatory for TCS  DEveloper</description>
        <errorConditionFormula>AND( $User.Alias=&quot;TCS COO&quot;,OR(RecordType.Name=&quot;Issues and Ideas&quot;,RecordType.Name=&quot;DuPont Administration&quot;),ISPICKVAL( Status__c, &quot;In Progress&quot;), ISBLANK(TEXT(Application__c)) )</errorConditionFormula>
        <errorDisplayField>Application__c</errorDisplayField>
        <errorMessage>Please Fill Application Field While Changing the Status to In Progress</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Accepted_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
ISPICKVAL( Status__c , &quot;Completed&quot;) &amp;&amp;
( $RecordType.Name = &quot;Issues and Ideas&quot; || $RecordType.Name = &quot;Price Approval&quot;) &amp;&amp;
ISBLANK( Date_Accepted__c )
)</errorConditionFormula>
        <errorDisplayField>Date_Accepted__c</errorDisplayField>
        <errorMessage>Please fill in the Date Accepted</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Closed_is_Required</fullName>
        <active>true</active>
        <description>Date Closed is Required when the status of the issue is completed (For record type=Issues &amp; Ideas)</description>
        <errorConditionFormula>AND ( 
ISPICKVAL( Status__c , &quot;Completed&quot;) &amp;&amp; 
( $RecordType.Name = &quot;Issues and Ideas&quot;  || $RecordType.Name = &quot;Price Approval&quot;) &amp;&amp; 
ISBLANK( Date_Closed__c ) 
)</errorConditionFormula>
        <errorDisplayField>Date_Closed__c</errorDisplayField>
        <errorMessage>Date Closed is mandatory when Status is &quot;Completed&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_closed_greater_than_Accepted_date</fullName>
        <active>true</active>
        <description>Issue closed date to be more than Created date.</description>
        <errorConditionFormula>AND (ISPICKVAL( Status__c , &quot;Completed&quot;)&amp;&amp;
(ISBLANK(Date_Closed__c)   ||
(DATEVALUE(Date_Closed__c) &lt;&gt; TODAY() )))</errorConditionFormula>
        <errorDisplayField>Date_Closed__c</errorDisplayField>
        <errorMessage>Date Closed shouldn&apos;t be blank and should be today only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dont_ChangeStatus_Accepted_To_Completed</fullName>
        <active>true</active>
        <description>Do not Change Status directly from Accepted to Completed</description>
        <errorConditionFormula>AND($User.Alias= &quot;TCS COO&quot;,ISCHANGED(Status__c),ISPICKVAL(Status__c,&quot;Completed&quot;), OR(ISPICKVAL(PRIORVALUE(Status__c), &quot;Not Started&quot;),ISPICKVAL(PRIORVALUE(Status__c), &quot;Accepted&quot;),ISPICKVAL(PRIORVALUE(Status__c), &quot;Escalated&quot;),ISPICKVAL(PRIORVALUE(Status__c), &quot;On Hold&quot;),ISPICKVAL(PRIORVALUE(Status__c), &quot;Approved by Review Team&quot;)) )</errorConditionFormula>
        <errorMessage>Do not Change Status directly from Not Started,Accepted,On Hold,Approved By Review Team,Escalated to Completed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Impact_is_mandatory</fullName>
        <active>true</active>
        <description>Rule to make sure that &apos;Impact&apos; is made mandatory whenever the Severity is High for record types,</description>
        <errorConditionFormula>AND ( 
ISPICKVAL( Severity__c , &quot;High&quot;) &amp;&amp; 
OR(($RecordType.Name = &quot;Issues and Ideas&quot;),($RecordType.Name = &quot;Marketing Communications&quot;),($RecordType.Name = &quot;Project Issues&quot;),($RecordType.Name = &quot;Price Approval&quot;)) &amp;&amp; 
ISBLANK( Impact__c ) 
)</errorConditionFormula>
        <errorMessage>You have selected the Severity as High, Please provide the Business impact/justification in order to expedite this Issue&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QA_Validation</fullName>
        <active>true</active>
        <description>Validation rule to make the issue can be completed only after QA is completed.</description>
        <errorConditionFormula>AND($User.Alias=&quot;TCS COO&quot;,PRIORVALUE( QA_Completed__c ) = False,ISPICKVAL( Status__c , &quot;Completed&quot;),
    Not(($User.Email  = &quot;madhuridevi.s@tcs.com&quot;)),
         OR(ISPICKVAL(Classification__c,&apos;Correct (Break/Fix)&apos;),ISPICKVAL(Classification__c,&apos;Enhance (Design)&apos;)),
         OR( $RecordType.Name = &quot;Issues and Ideas&quot; || $RecordType.Name = &quot;Price Approval&quot;)
)</errorConditionFormula>
        <errorDisplayField>QA_Completed__c</errorDisplayField>
        <errorMessage>Issue can be closed only after successful testing with test results by QA team</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Resolution_is_required</fullName>
        <active>true</active>
        <description>Resolution is Required when the status of the issue is completed</description>
        <errorConditionFormula>AND ($User.Alias=&quot;TCS COO&quot; &amp;&amp;
ISPICKVAL( Status__c , &quot;Completed&quot;) &amp;&amp; 
(ISBLANK( Resolution__c ) || 
(((ISPICKVAL(Classification__c,&quot;Correct (Break/Fix)&quot;)) &amp;&amp; LEN(Resolution__c) &lt; 100))|| 
(((ISPICKVAL(Classification__c,&quot;Adhoc&quot;) || 
   ISPICKVAL(Classification__c,&quot;Routine&quot;) || 
   ISPICKVAL(Classification__c,&quot;Data migration/Go-live&quot;)) &amp;&amp; LEN(Resolution__c) &lt; 25)))) &amp;&amp;  NOT((ISPICKVAL(Classification__c,&quot;Enhance (Design)&quot;)))</errorConditionFormula>
        <errorDisplayField>Resolution__c</errorDisplayField>
        <errorMessage>Resolution along with RCA is mandatory when Status is &quot;Completed&quot;.Minimum characters to be entered for Config changes  25 characters and for Custom changes  100 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubStaus_is_Mandatory_for_Status_Waiting</fullName>
        <active>true</active>
        <description>Issue Sub Status is Mandatory when Status is in Waiting</description>
        <errorConditionFormula>AND($User.Alias=&quot;TCS COO&quot;,ISPICKVAL(Status__c,&quot;Waiting&quot;),  ISBLANK(TEXT(Sub_Status__c)))</errorConditionFormula>
        <errorDisplayField>Sub_Status__c</errorDisplayField>
        <errorMessage>Please fill Sub Status When the Status is Waiting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SubType_is_Mandatory_Type_is_Integration</fullName>
        <active>true</active>
        <description>Issue Subtype is Mandatory,is Type is Integration</description>
        <errorConditionFormula>AND($User.Alias=&quot;TCS COO&quot;,ISPICKVAL(Type__c,&quot;Integration&quot;), ISBLANK(TEXT(SubType__c)))</errorConditionFormula>
        <errorDisplayField>SubType__c</errorDisplayField>
        <errorMessage>Please Fill SubType When Type is Integration</errorMessage>
    </validationRules>
</CustomObject>